<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Pooler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Test de fonctionnement</string>
    <string name="new_journey">Nouveau Trajet</string>
    <string name="contacts">Contacts</string>
    <string name="roads">Itinéraires</string>
    <string name="history">Historique</string>
    <string name="image">An Image</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_road_list">RoadListActivity</string>
    <string name="title_activity_new_journey">NewJourneyActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_road_detail">RoadDetailActivity</string>
    <string name="roadname">Nom du Trajet</string>
    <string name="length">Longueur</string>
    <string name="duration">Durée</string>
    <string name="price">Prix</string>
    <string name="create_road">Nouvel Itinéraire</string>
    <string name="unknown"><i>Inconnu</i></string>
    <string name="select_road">Choisir un intinéraire</string>
    <string name="road"><b>Itinéraire</b></string>
    <string name="date">Date</string>
    <string name="set_date">Modifier la date</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="edit">Modifier</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="new_contact">Nouveau Contact</string>
    <string name="new_road">Nouvel Itinéraire</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="bill">Solde</string>
    <string name="pay">Paier</string>

</resources>