<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewJourneyActivity" >

    <!-- header -->
	<LinearLayout android:orientation="horizontal"
	    android:background="@drawable/toptitlebar3"
	    android:layout_height="@dimen/config_row_size" 
		android:layout_width="fill_parent" > 
	
		<ImageView android:layout_height="wrap_content"
		    android:layout_width="wrap_content" 
			android:layout_marginLeft="@dimen/config_picto_ListScreen_notif_left_margin"
			android:src="@drawable/logo"> 
		</ImageView> 

		<TextView android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
			android:layout_marginLeft="@dimen/config_row_ListScreen_title_left_and_right_margin" 
			android:layout_marginRight="@dimen/config_row_ListScreen_title_left_and_right_margin" 
			android:scrollHorizontally="true"
			android:textSize="@dimen/config_text_ListScreen_title_size" 
			android:textColor="@color/plainWhite"
			android:singleLine="true"
			android:layout_gravity="center_vertical" 
			android:gravity="center_vertical"
			android:typeface="normal"
			android:text="Example">
		</TextView> 
	</LinearLayout>
	
	
	<!-- The divider -->
	<ImageView android:background="@color/divider"
	    android:layout_height="@dimen/config_divider_size" 
		android:layout_width="fill_parent" />
	
	<!-- Les infos sur le trajet -->
	<LinearLayout android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingBottom="10dp" >
	
	
		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/road" />
		
		<ImageView android:background="@color/divider"
		    android:layout_height="@dimen/config_divider_size" 
			android:layout_width="fill_parent" />
		
		<TextView android:id="@+id/road_name_display"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="20dp"
		    android:paddingBottom="10dp"
		    android:text="@string/unknown" />
		    
		    			
		<Button android:id="@+id/select_road_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:text="@string/select_road" />
	
	</LinearLayout>
	
	<!-- Les infos sur la date -->
	<LinearLayout android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	  	android:paddingLeft="10dp"
	  	android:paddingRight="10dp"
	  	android:paddingBottom="10dp" >
	    
	    <TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/date" />
		
	    <ImageView android:background="@color/divider"
		    android:layout_height="@dimen/config_divider_size" 
			android:layout_width="fill_parent" />
	    
	    <TextView android:id="@+id/date_display"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="20dp"
		    android:paddingBottom="10dp" />
	    
	    <Button android:id="@+id/set_date_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/set_date"/>
		
	    
	</LinearLayout>
	    
</LinearLayout>