<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/plainBlack"
    android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"> 

    <!-- header -->
	<LinearLayout android:orientation="horizontal"
	    android:background="@drawable/toptitlebar3"
	    android:layout_height="@dimen/config_row_size" 
		android:layout_width="fill_parent"
		android:id="@+id/header"> 
	
		<ImageView android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:id="@+id/image_header" 
			android:layout_marginLeft="@dimen/config_picto_ListScreen_notif_left_margin"
			android:src="@drawable/logo"> 
		</ImageView> 

		<TextView android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:id="@+id/text_header" 
			android:layout_marginLeft="@dimen/config_row_ListScreen_title_left_and_right_margin" 
			android:layout_marginRight="@dimen/config_row_ListScreen_title_left_and_right_margin" 
			android:scrollHorizontally="true"
			android:textSize="@dimen/config_text_ListScreen_title_size" 
			android:textColor="@color/plainWhite"
			android:singleLine="true"
			android:layout_gravity="center_vertical" 
			android:gravity="center_vertical"
			android:typeface="normal"
			android:text="@string/contacts">
		</TextView> 
	</LinearLayout>
	
	
	<!-- The divider -->
	<ImageView android:background="@color/divider"
	    android:layout_height="@dimen/config_divider_size" 
		android:layout_width="fill_parent"
		android:id="@+id/menu_header_divider"/>
	
	<!-- Header Field -->
	<TextView android:id="@+id/name_header"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/config_row_ListItem_left_margin"
	    android:paddingRight="@dimen/config_row_ListItem_left_margin"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:layout_gravity="center_vertical"
	    android:textSize="@dimen/config_text_ListItem_size" 
	    android:text="@string/first_name" />
	
	<!-- The divider -->
	<ImageView android:background="@color/divider"
	    android:layout_height="@dimen/config_divider_size" 
		android:layout_width="fill_parent"
		android:id="@+id/menu_header_divider"/>
	
	<!-- Info sur le solde -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/config_row_ListItem_left_margin"
	    android:paddingRight="@dimen/config_row_ListItem_left_margin"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp" >
	    
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="2"
	        android:layout_gravity="center_vertical"
	        android:textSize="@dimen/config_text_ListItem_size"
	        android:text="@string/bill" />
	    
	    <TextView android:id="@+id/bill_field"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_gravity="center_vertical"
	        android:textSize="@dimen/config_text_ListItem_size"
	        android:text="25 €" />
	    
	</LinearLayout>
	
	<!-- Boutons -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:paddingLeft="@dimen/config_row_ListItem_left_margin"
	    android:paddingRight="@dimen/config_row_ListItem_left_margin"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp" >
	    
	    <Button android:id="@+id/history_button"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:textSize="@dimen/config_text_ListItem_size"
	        android:text="@string/history" />
	    
	    <Button android:id="@+id/pay_button"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:textSize="@dimen/config_text_ListItem_size"
	        android:text="@string/pay" />
	    
	</LinearLayout>
	    
	

</LinearLayout>