<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- Contact test -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/contacts"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >
        
        <EditText android:id="@+id/contact_form"
            android:inputType="text"
 			android:hint="contact name"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
        <Button android:id="@+id/contact_button"
            android:text="Add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Road Test -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/roads"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >
        
        <EditText android:id="@+id/road_form"
            android:inputType="text"
 			android:hint="road name"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
        <Button android:id="@+id/road_button"
            android:text="Add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
        
    </LinearLayout>
    
    <!-- Journey Test -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/history"/>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/journey_button"
            android:text="Add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
	
</LinearLayout>